--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
         <div class="container">
             <section class="quiz-section">
                 <div class="quiz-box">
-                    <h1>Codehal Quiz</h1>
+                    <h1>Deepansh Quiz</h1>
                     <div class="quiz-header">
                         <span>Quiz Website Tutorial</span>
                         <span class="header-score">Score: 0 / 5</span>
